--- a/docs/out_ptr/reference/inout_ptr.adoc
+++ b/docs/out_ptr/reference/inout_ptr.adoc
@@ -17,7 +17,7 @@
 namespace boost { namespace out_ptr {
 
 	template <class Pointer, class Smart, class... Args>
-	inout_ptr_t<Smart, Pointer, Args...> inout_ptr(Smart& s, Args&&... args) noexcept
+	inout_ptr_t<Smart, Pointer, Args...> inout_ptr(Smart& s, Args&&... args) noexcept;
 
 	template <class Smart, class... Args>
 	inout_ptr<Smart, POINTER_OF(Smart), Args...> inout_ptr(Smart& s, Args&&... args) noexcept;
@@ -30,6 +30,72 @@ namespace boost { namespace out_ptr {
 * The second overload is Equivalent to: `return inout_ptr_t<Smart, POINTER_OF(Smart), Args...>(s, std::forward<Args>(args)...);`
 
 
+[[ref.out_ptr.traits]]
+### class template `boost::out_ptr::out_ptr_traits`
+
+```
+namespace boost { namespace out_ptr {
+
+	template <class Pointer, class Smart>
+	class out_ptr_traits {
+	public:
+		// if program-specialized, optional
+		using pointer = POINTER_OF_OR(Smart, Pointer);
+
+		template <typename... Args>
+		static pointer construct(Smart& s, Args&&... args) noexcept;
+
+		// if program-specialized, optional
+		static pointer* get(Smart& s, pointer& p) noexcept;
+
+		template <typename... Args>
+		static void reset(Smart& s, pointer& p, Args&&... args) noexcept(see-below);
+	};
+
+}}
+```
+
+### Member Types
+
+- Mandates: `pointer` be http://eel.is/c++draft/concept.moveconstructible[MoveConstructible].
+
+### Static Member Functions
+
+`static pointer construct(Smart& smart, Args&&... args) noexcept;`
+
+- Returns: Equivalent to:
+* `smart` if `std::is_pointer_v<Smart>` is true,
+* otherwise, an unspecified value of either `smart.get()` or `smart.release()`.
+
+NOTE: An unspecified value allows an implementation and subsequent program-defined specializations to pick an option which fits an implementation's purpose. ``boost::out_ptr::inout_ptr_t``s implementation behaves as if `s->release()` is called in the destructor, specifically to avoid the problem raised by <<../caveats.adoc#caveat.order, Order of Evaluation>> issues in {cpp}.
+
+- Remarks: if an implementation calls `smart.release()` in this function, then it shall not call `smart.release()` in the `reset` function of this type.
+
+`static pointer* get(Smart& smart, pointer& p) noexcept;`
+
+- Returns: `addressof(p)`.
+
+- Remarks: If the program specializes this trait, then the `get` function is optional so long as `addressof(p)` produces an object implicitly convertible to `Pointer*`.
+
+`static void reset(Smart& smart, pointer& p, Args&&... args) noexcept;`
+
+- Constraints: Either `std::is_pointer_v<Smart>` is `true` or the expression `smart.release()` is well-formed.
+
+- Let `SP` be <<../reference.adoc#ref.def, `POINTER_OF_OR(Smart, Pointer)`>>.
+
+- Effects: Equivalent to:
+* `smart = Smart( static_cast<SP>(p), std::forward<Args>(args)... );` if `std::is_pointer_v<Smart>` is true,
+* `=smart.release(); smart.reset( static_cast<SP>(p), std::forward<Args>(args)... );` if the expression `smart.reset(static_cast<SP>(p), std::forward<Args>(args)...)` is well-formed,
+* otherwise, `smart.release(); *s = Smart( static_cast<SP>(p), std::forward<Args>(args)... );`.
+
+- Remarks: if an implementation calls `smart.release()` in this function, then it shall not call `smart.release()` in the `constructor` function of this type.
+
+- Throws:
+* no exceptions and is `noexcept` if `std::is_pointer_v<Smart>` is true;
+* any exceptions and is conditionally `noexcept` from `s->release();` and `s->reset( static_cast<SP>(p), std::forward<Args>(args)... );` if the expression `s->reset(static_cast<SP>(p), std::forward<Args>(args)...)` is well-formed;
+* otherwise, any exceptions and is conditionally `noexcept` from `s->release();` and `*s = Smart( static_cast<SP>(p), std::forward<Args>(args)... );`;
+
+
 [[ref.inout_ptr.class]]
 ### `boost::out_ptr::inout_ptr_t`
 
@@ -38,6 +104,7 @@ namespace boost { namespace out_ptr {
 
 	template <class Smart, class Pointer, class... Args>
 	class inout_ptr_t {
+	public:
 		inout_ptr_t(Smart&, Args...) noexcept;
 		inout_ptr_t(inout_ptr_t&&) noexcept;
 
@@ -48,15 +115,18 @@ namespace boost { namespace out_ptr {
 		operator Pointer const*() noexcept const;
 
 	private:
+		using traits_type = inout_ptr_traits<Smart, Pointer>; // exposition only
+		using pointer = POINTER_OF_OR(traits_type, Pointer); // exposition only
+
 		Smart* s; // exposition only
 		tuple<Args...> a; // exposition only
-		Pointer p; // exposition only
+		pointer p; // exposition only
 	};
 	
 }}
 ```
 
-IMPORTANT: If `Smart` is a specialization of `std::shared_ptr` or `boost::shared_ptr`, the program is ill-formed. `Pointer` shall meet the http://eel.is/c++draft/nullablepointer.requirements[`Cpp17NullablePointer` requirements [*nullablepointer.requirements*]].
+IMPORTANT: If `Smart` is a specialization of `std::shared_ptr` or `boost::shared_ptr`, the program is ill-formed. `Pointer` shall meet the http://eel.is/c++draft/nullablepointer.requirements[`Cpp17NullablePointer` requirements [*nullablepointer.requirements*]], unless this type is program specialized.
 
 NOTE: It is impossible to properly release the managed resource from a `std::shared_ptr` or `boost::shared_ptr` given its shared ownership model.
 
@@ -64,13 +134,7 @@ NOTE: It is impossible to properly release the managed resource from a `std::sha
 
 `inout_ptr_t(Smart& smart, Args... args) noexcept;`
 
-- Effects: initializes `s` with `addressof(smart)`, `a` with `std::forward<Args>(args)...`, and `p` to either
-* `smart` if `std::is_pointer_v<Smart>` is true,
-* otherwise, an unspecified value of either `smart.get()` or `smart.release()`.
-
-NOTE: An unspecified value allows an implementation and subsequent program-defined specializations to pick an option which fits an implementation's purpose. ``boost::out_ptr::inout_ptr_t``s implementation behaves as if `s->release()` is called in the destructor, specifically to avoid the problem raised <<../caveats.adoc#caveat.order, Order of Evaluation>> issues in C++.
-
-- Remarks: if an implementation calls `smart.release()` or `s->release()`, then it shall not call `s->release()` in the destructor.
+- Effects: initializes `s` with `addressof(smart)`, `a` with `std::forward<Args>(args)...`, and `p` with `inout_ptr_traits<Smart>::construct(s, p, a_args...)`, where `a_args...` are references to the arguments stored in `a`.
 
 `inout_ptr_t(inout_ptr&& rhs) noexcept;`
 
@@ -86,28 +150,27 @@ NOTE: An unspecified value allows an implementation and subsequent program-defin
 s = std::move(rhs.s); 
 a = std::move(rhs.a); 
 p = std::move(rhs.p);
-rhs.p = nullptr;
+rhs.s = nullptr;
 return *this;
 ```
 
+
 ### Destructors
 
-`~inout_ptr_t() noexcept(see-below);`
-
-- Constraints: Either `std::is_pointer_v<Smart>` is `true` or the expression `s->release()` is well-formed.
+`~out_ptr_t() noexcept(see-below);`
 
 - Let `SP` be <<../reference.adoc#ref.def, `POINTER_OF_OR(Smart, Pointer)`>>.
 
-- Effects: Equivalent to:
-* `if (p != nullptr) { *s = Smart( static_cast<SP>(p), std::forward<Args>(args)... ); }` if `std::is_pointer_v<Smart>` is true,
-* `s->release(); if (p != nullptr) { s->reset( static_cast<SP>(p), std::forward<Args>(args)... ); }` if the expression `s->reset(static_cast<SP>(p), std::forward<Args>(args)...)` is well-formed,
-* otherwise, `s->release(); if (p != nullptr) { *s = Smart( static_cast<SP>(p), std::forward<Args>(args)... ); }`.
+- Requires: `noexcept(true)` if the evaluation of the Effects is `noexcept`. Otherwise, `noexcept(false)`.
 
-- Remarks: if an implementation calls `s->release()` or `smart.release()` in the constructor, then it shall not call `s->release()` in the destructor.
+- Effects: Equivalent to: `if (s != nullptr) { traits_type::reset(*s, p, std::forward<Args>(args)...); }`, where `Args` are stored in `a`.
 
-- Throws:
-* no exceptions and is `noexcept` if `std::is_pointer_v<Smart>` is true;
-* any exceptions and is conditionally `noexcept` from `s->release();` and `s->reset( static_cast<SP>(p), std::forward<Args>(args)... );` if the expression `s->reset(static_cast<SP>(p), std::forward<Args>(args)...)` is well-formed;
-* otherwise, any exceptions and is conditionally `noexcept` from `s->release();` and `*s = Smart( static_cast<SP>(p), std::forward<Args>(args)... );`;
+- Throws: anything thrown by the evaluation of the Effects.
 
-where `Args` are the arguments stored in `a`.
+
+
+### Conversions
+
+`operator Pointer*() const noexcept;`
+
+- Effects: Equivalent to: `return traits_type::get(*s, p)`.
