--- a/docs/out_ptr/customization.adoc
+++ b/docs/out_ptr/customization.adoc
@@ -11,13 +11,13 @@
 [[customization]]
 # Customization for Your Smart Pointers
 
-Both `boost::out_ptr::out_ptr` and `boost::out_ptr::inout_ptr` have expectations on the Smart Pointer passed into it as the first argument.
+Both `phd::out_ptr::out_ptr` and `phd::out_ptr::inout_ptr` have expectations on the Smart Pointer passed into it as the first argument.
 
-In general, `boost::out_ptr::out_ptr` needs the following 2 things:
+In general, `phd::out_ptr::out_ptr` needs the following 2 things:
 - A `.get()` call, to retrieve the underlying pointer;
 - and, one of `.reset(pointer, Args...)` or `SmartPointer(pointer, Args...)` to be a well-formed expression.
 
-Additionally, `boost::out_ptr::inout_ptr` has one more additional requirement:
+Additionally, `phd::out_ptr::inout_ptr` has one more additional requirement:
 - have a `.release()` function to release ownership of the resource so that utilized API can delete it and then re-allocate it.
 
 Therefore, if you have a `.get()` and `.reset()` call, alongside a `.release()` for `inout_ptr`, you are completely fine with the default implementation.
@@ -26,7 +26,7 @@ Therefore, if you have a `.get()` and `.reset()` call, alongside a `.release()` 
 [[customization.point]]
 ## Changing the Defaults
 
-A user can change the default behavior of these types for their classes, so long as they follow the 4 functions specified for either <<reference/out_ptr.adoc#ref.out_ptr.class, `boost::out_ptr::out_ptr_t`>> or <<reference/inout_ptr.adoc#ref.inout_ptr.class, `boost::out_ptr::inout_ptr_t`>>. Let us consider a hypothetical class `handle` in a library and namespace named `phd`, where it is a more specialized version of `std::unique_ptr` that does not necessarily assume pointer semantics for the type. It allows one to customize how nullability is checked, what null value is written into the type, and more by the deleter (to make it work for an e.g. `int`):
+A user can change the default behavior of these types for their classes, so long as they follow the 4 functions specified for either <<reference/out_ptr.adoc#ref.out_ptr.class, `phd::out_ptr::out_ptr_t`>> or <<reference/inout_ptr.adoc#ref.inout_ptr.class, `phd::out_ptr::inout_ptr_t`>>. Let us consider a hypothetical class `handle` in a library and namespace named `phd`, where it is a more specialized version of `std::unique_ptr` that does not necessarily assume pointer semantics for the type. It allows one to customize how nullability is checked, what null value is written into the type, and more by the deleter (to make it work for an e.g. `int`):
 
 ```
 namespace phd {
@@ -70,33 +70,33 @@ This type may require special support. For example, this might represent a handl
 [[customization.point.traits]]
 ## Customization: High-Level Traits Specialization
 
-A user may _(partially) template specialize_ the `boost::out_ptr::out_ptr_traits` and the `boost::out_ptr::inout_ptr_traits`. These types offer less control over the layout and internals of the RAII structures that are used to power the abstraction, while giving users the benefit of only having to override a small select portion of functionality. To use this traits type:
+A user may _(partially) template specialize_ the `phd::out_ptr::out_ptr_traits` and the `phd::out_ptr::inout_ptr_traits`. These types offer less control over the layout and internals of the RAII structures that are used to power the abstraction, while giving users the benefit of only having to override a small select portion of functionality. To use this traits type:
 
 - First, open up the Boost.OutPtr namespace:
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 
-}} // namespace boost::out_ptr
+}} // namespace phd::out_ptr
 ```
 
 - Then, create a _partial template specialization_:
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 	
 	template <typename T, typename Del, typename Pointer>
 	class inout_ptr_traits<phd::handle<T, Del>, Pointer> {
 		/* ... */
 	};
 
-}} // namespace boost::out_ptr
+}} // namespace phd::out_ptr
 ```
 
 - Now, we need to create a handful of **required** functions. We need... 
-* a `construct` function that takes the smart pointer (the handle) and all the Arguments that were stored from the initial call to `boost::out_ptr::inout_ptr( ... )`;
+* a `construct` function that takes the smart pointer (the handle) and all the Arguments that were stored from the initial call to `phd::out_ptr::inout_ptr( ... )`;
 * and, a `reset()` that takes all the necessary arguments and calls `.reset()`.
 
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 	
 	template <typename T, typename Del, typename Pointer>
 	class inout_ptr_traits<phd::handle<T, Del>, Pointer> {
@@ -107,7 +107,7 @@ namespace boost { namespace out_ptr {
 		static Pointer construct (Smart& s) noexcept;
 	};
 
-}} // namespace boost::out_ptr
+}} // namespace phd::out_ptr
 ```
 
 By using overloading, you can write as many or as little `construct` functions as you want that assert that a certain number or certain types of arguments are present:
@@ -115,25 +115,25 @@ By using overloading, you can write as many or as little `construct` functions a
 [[customization.point.struct]]
 ## Customization: Low-Level Struct Specialization
 
-A user may _(partially) template specialize_ the customized `boost::out_ptr::out_ptr_t` and `boost::out_ptr::inout_ptr_t`. It allows the user to control what gets stored and how simple it is. Here is an example for `inout_ptr_t`:
+A user may _(partially) template specialize_ the customized `phd::out_ptr::out_ptr_t` and `phd::out_ptr::inout_ptr_t`. It allows the user to control what gets stored and how simple it is. Here is an example for `inout_ptr_t`:
 
 - First, open up the Boost.OutPtr namespace:
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 
-}} // namespace boost::out_ptr
+}} // namespace phd::out_ptr
 ```
 
 - Then, create a _partial template specialization_:
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 	
 	template <typename T, typename Del, typename Pointer, typename... Args>
 	class inout_ptr_t<phd::handle<T, Del>, Pointer, Args...> {
 		/* ... */
 	};
 
-}} // namespace boost::out_ptr
+}} // namespace phd::out_ptr
 ```
 
 - Now, we need to create a family of required functions (4 functions). We need... 
@@ -143,7 +143,7 @@ namespace boost { namespace out_ptr {
 * and, a destructor that calls `.reset()`.
 
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 	
 	template <typename T, typename Del, typename Pointer, typename... Args>
 	class inout_ptr_t<phd::handle<T, Del>, Pointer, Args...> {
@@ -159,13 +159,13 @@ namespace boost { namespace out_ptr {
 		~inout_ptr_t() noexcept;
 	}
 
-}} // namespace boost::out_ptr
+}} // namespace phd::out_ptr
 ```
 
 
 ### And That's it!
 
-Either way you choose to specialize, that is everything you need to write. A full, optimized implementation for `boost::out_ptr::inout_ptr_t` and `phd::handle` can be seen in https://github.com/ThePhD/out_ptr/blob/master/examples/source/customization.handle.cpp[this example].
+Either way you choose to specialize, that is everything you need to write. A full, optimized implementation for `phd::out_ptr::inout_ptr_t` and `phd::handle` can be seen in https://github.com/ThePhD/out_ptr/blob/master/examples/source/customization.handle.cpp[this example].
 
-The work is identical for `inout_ptr_t`, but the requirements on the type for how the destructor behave is slightly different. It anticipates that the function handling the double-pointer output argument `$$T**$$` will also handle calling the deleter first before re-allocating properly; therefore, its only responsibility to make sure the pointer is properly reseated in the smart pointer. This is typically done by calling `.release()` on the smart pointer and then putting the new value back into the pointer. For this reason, `boost::out_ptr::inout_ptr_t` cannot support shared pointers, because there is no way to release a pointer in a shared ownership model.
+The work is identical for `inout_ptr_t`, but the requirements on the type for how the destructor behave is slightly different. It anticipates that the function handling the double-pointer output argument `$$T**$$` will also handle calling the deleter first before re-allocating properly; therefore, its only responsibility to make sure the pointer is properly reseated in the smart pointer. This is typically done by calling `.release()` on the smart pointer and then putting the new value back into the pointer. For this reason, `phd::out_ptr::inout_ptr_t` cannot support shared pointers, because there is no way to release a pointer in a shared ownership model.
 
