--- a/docs/out_ptr/overview.adoc
+++ b/docs/out_ptr/overview.adoc
@@ -10,10 +10,10 @@
 
 # Boost.OutPtr at a glance
 
-Have you ever wanted to pass a smart pointer like `std::unique_ptr` or `boost::shared_ptr` or `boost::intrusive_ptr` to a C API?
+Have you ever wanted to pass a smart pointer like `std::unique_ptr` or `phd::shared_ptr` or `phd::intrusive_ptr` to a C API?
 
 ```
-boost::shared_ptr<mll_driver> axis_driver;
+phd::shared_ptr<mll_driver> axis_driver;
 mll_errno err = mll_driver_init(&axis_driver, 
 	/* additional args ...*/);
 if (err != MLL_SUCESS) {
@@ -28,7 +28,7 @@ The above code doesn't compile: the pointer may be "smart", but it isn't smart e
 Downgrading to a raw pointer and then inserting it into the pointer works, but is more verbose:
 
 ```
-boost::shared_ptr<mll_driver> axis_driver;
+phd::shared_ptr<mll_driver> axis_driver;
 mll_driver* raw_axis_driver = nullptr;
 mll_errno err = mll_driver_init(&raw_axis_driver, 
 	/* additional args ...*/);
@@ -45,9 +45,9 @@ This works, but you need to call `.reset(...)` with the raw pointer and set ever
 With Boost.OutPtr, we can do better. Get rid of the raw pointer and avoid potential memory or resource leakage by using this https://en.cppreference.com/w/cpp/language/raii[RAII] function:
 
 ```
-using bop = boost::out_ptr;
+using bop = phd::out_ptr;
 
-boost::shared_ptr<mll_driver> axis_driver(nullptr);
+phd::shared_ptr<mll_driver> axis_driver(nullptr);
 mll_errno err = mll_driver_init(bop::out_ptr(axis_driver, mll_driver_free), 
 	/* additional args ...*/);
 if (err != MLL_SUCESS) {
@@ -59,7 +59,7 @@ No reset call, no inspecting for exception safety, and it remembers the deleter 
 
 Welcome to Boost.OutPtr, the present and future of C API interoperation. This library automates the `.reset(...)` and -- sometimes additionally -- the `.release()` call when interfacing with C-style initialization functions which take an "output parameter" of `$$T**$$`.
 
-- Use <<reference/out_ptr.adoc#ref.out_ptr.function, `boost::out_ptr::out_ptr`>> when you just need to call `.reset()`, or use <<reference/inout_ptr.adoc#ref.inout_ptr.function, `boost::out_ptr::inout_ptr`>>, when you need to call `.release()` and then `.reset()` (e.g., for a reallocating C function).
+- Use <<reference/out_ptr.adoc#ref.out_ptr.function, `phd::out_ptr::out_ptr`>> when you just need to call `.reset()`, or use <<reference/inout_ptr.adoc#ref.inout_ptr.function, `phd::out_ptr::inout_ptr`>>, when you need to call `.release()` and then `.reset()` (e.g., for a reallocating C function).
 - Get started with the <<examples.adoc#examples,examples>>.
 - Understand the pitfalls and problems that come with {cpp} and Boost.OutPtr by reading <<caveats.adoc#caveats, the Caveats>>.
 - Read up on how to use it with your <<customization.adoc#customization, custom smart pointers>>, if you do not have a conforming interface!
