--- a/docs/out_ptr/reference/inout_ptr.adoc
+++ b/docs/out_ptr/reference/inout_ptr.adoc
@@ -11,10 +11,10 @@
 # inout_ptr
 
 [[ref.inout_ptr.function]]
-### `boost::out_ptr::inout_ptr`
+### `phd::out_ptr::inout_ptr`
 
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 
 	template <class Pointer, class Smart, class... Args>
 	inout_ptr_t<Smart, Pointer, Args...> inout_ptr(Smart& s, Args&&... args) noexcept;
@@ -31,10 +31,10 @@ namespace boost { namespace out_ptr {
 
 
 [[ref.out_ptr.traits]]
-### class template `boost::out_ptr::out_ptr_traits`
+### class template `phd::out_ptr::out_ptr_traits`
 
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 
 	template <class Pointer, class Smart>
 	class out_ptr_traits {
@@ -67,7 +67,7 @@ namespace boost { namespace out_ptr {
 * `smart` if `std::is_pointer_v<Smart>` is true,
 * otherwise, an unspecified value of either `smart.get()` or `smart.release()`.
 
-NOTE: An unspecified value allows an implementation and subsequent program-defined specializations to pick an option which fits an implementation's purpose. ``boost::out_ptr::inout_ptr_t``s implementation behaves as if `s->release()` is called in the destructor, specifically to avoid the problem raised by <<../caveats.adoc#caveat.order, Order of Evaluation>> issues in {cpp}.
+NOTE: An unspecified value allows an implementation and subsequent program-defined specializations to pick an option which fits an implementation's purpose. ``phd::out_ptr::inout_ptr_t``s implementation behaves as if `s->release()` is called in the destructor, specifically to avoid the problem raised by <<../caveats.adoc#caveat.order, Order of Evaluation>> issues in {cpp}.
 
 - Remarks: if an implementation calls `smart.release()` in this function, then it shall not call `smart.release()` in the `reset` function of this type.
 
@@ -97,10 +97,10 @@ NOTE: An unspecified value allows an implementation and subsequent program-defin
 
 
 [[ref.inout_ptr.class]]
-### `boost::out_ptr::inout_ptr_t`
+### `phd::out_ptr::inout_ptr_t`
 
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 
 	template <class Smart, class Pointer, class... Args>
 	class inout_ptr_t {
@@ -126,9 +126,9 @@ namespace boost { namespace out_ptr {
 }}
 ```
 
-IMPORTANT: If `Smart` is a specialization of `std::shared_ptr` or `boost::shared_ptr`, the program is ill-formed. `Pointer` shall meet the http://eel.is/c++draft/nullablepointer.requirements[`Cpp17NullablePointer` requirements [*nullablepointer.requirements*]], unless this type is program specialized.
+IMPORTANT: If `Smart` is a specialization of `std::shared_ptr` or `phd::shared_ptr`, the program is ill-formed. `Pointer` shall meet the http://eel.is/c++draft/nullablepointer.requirements[`Cpp17NullablePointer` requirements [*nullablepointer.requirements*]], unless this type is program specialized.
 
-NOTE: It is impossible to properly release the managed resource from a `std::shared_ptr` or `boost::shared_ptr` given its shared ownership model.
+NOTE: It is impossible to properly release the managed resource from a `std::shared_ptr` or `phd::shared_ptr` given its shared ownership model.
 
 ### Constructors
 
