--- a/docs/out_ptr/reference/out_ptr.adoc
+++ b/docs/out_ptr/reference/out_ptr.adoc
@@ -11,10 +11,10 @@
 # out_ptr
 
 [[ref.out_ptr.function]]
-### function template `boost::out_ptr::out_ptr`
+### function template `phd::out_ptr::out_ptr`
 
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 
 	template <class Pointer, class Smart, class... Args>
 	out_ptr_t<Smart, Pointer, Args...> out_ptr(Smart& s, Args&&... args) noexcept
@@ -31,10 +31,10 @@ namespace boost { namespace out_ptr {
 
 
 [[ref.inout_ptr.traits]]
-### class template `boost::out_ptr::out_ptr_traits`
+### class template `phd::out_ptr::out_ptr_traits`
 
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 
 	template <class Pointer, class Smart>
 	class out_ptr_traits {
@@ -90,10 +90,10 @@ namespace boost { namespace out_ptr {
 
 
 [[ref.out_ptr.class]]
-### class template `boost::out_ptr::out_ptr_t`
+### class template `phd::out_ptr::out_ptr_t`
 
 ```
-namespace boost { namespace out_ptr {
+namespace phd { namespace out_ptr {
 
 	template <class Smart, class Pointer, class... Args>
 	class out_ptr_t {
@@ -119,7 +119,7 @@ namespace boost { namespace out_ptr {
 }}
 ```
 
-IMPORTANT: If `Smart` is a specialization of `std::shared_ptr` or `boost::shared_ptr`; and, `sizeof...(Args) == 0`, the program is ill-formed. `Pointer` shall meet the http://eel.is/c++draft/nullablepointer.requirements[`Cpp17NullablePointer` requirements [*nullablepointer.requirements*]], unless this type is program specialized.
+IMPORTANT: If `Smart` is a specialization of `std::shared_ptr` or `phd::shared_ptr`; and, `sizeof...(Args) == 0`, the program is ill-formed. `Pointer` shall meet the http://eel.is/c++draft/nullablepointer.requirements[`Cpp17NullablePointer` requirements [*nullablepointer.requirements*]], unless this type is program specialized.
 
 NOTE: It is typically a user error to reset a `shared_ptr` without specifying a deleter, as `std::shared_ptr` will replace a custom deleter with the default deleter upon usage of `.reset(...)`, as specified in http://eel.is/c++draft/util.smartptr.shared.mod[[**util.smartptr.shared.mod**]]
 
